# Algorithms

./: .gitignore
Astar/: README.md  md
Astar/C++/: CMakeLists.txt
Astar/C++/src/: astar_algos.hpp  main.cpp
Astar/Python3/: Astar.py  main.py
Config_parser/aiml/python/: main.py  requirements.txt  test.aiml
Config_parser/json/: CMakeLists.txt  main.cpp
Config_parser/toml/: CMakeLists.txt  config.toml  main.cpp
LeetCode/task_2/: .gitignore  README.md
LeetCode/task_2/include/: lib.hpp
LeetCode/task_2/src/: lib.cpp  main.cpp
LeetCode/task_2/tests/: test.cpp
LeetCode/task_3/: main.cpp
LeetCode/task_9/: README.md
LeetCode/task_9/include/: lib.hpp
LeetCode/task_9/src/: lib.cpp  main.cpp
ML/test/: CMakeLists.txt  README.md
ML/test/cmake/: FindTensorFlow.cmake
ML/test/src/: main.cpp  simple_model.cpp  simple_model.hpp
ML/untitled/: main.cpp
Sockets/hh.ru/Client/: CMakeLists.txt  main.cpp
Sockets/hh.ru/Server/: CMakeLists.txt  main.cpp
Threading/Generator_test/: .gitignore  CMakeLists.txt  CMakePresets.json
Threading/Generator_test/Generator_test/: CMakeLists.txt  Coroutine.cpp  Coroutine.h
Yandex/yandexrandom1_monotonearray/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Yandex/yandexrandom1_monotonearray/cmake/: LocalSet.cmake  Targets.cmake
Yandex/yandexrandom1_monotonearray/include/: monotonous_subarray.hpp
Yandex/yandexrandom1_monotonearray/src/: main.cpp  monotonous_subarray.cpp
Yandex/yandexrandom1_monotonearray/tests/: test.cpp
k-means/: CMakeLists.txt  algorithm.drawio  algorithm_gpu.drawio  ech
k-means/include/: cpu.hxx  gpu.cu  libs.hpp  local.hpp
k-means/include/points/: point.hxx
k-means/src/: main.cu
k-means/src/objects/: cpu.cxx  point.cpp
romanNumbers/coder/python/: ToRomanNumber.py  main.py
